--- a/src/components/home/HomeBody/Search.css
+++ b/src/components/home/HomeBody/Search.css
@@ -33,6 +33,18 @@
         padding-top: 30px;
         font-size: 16px !important;
     }
+    .searchInputDriverInformation::-webkit-input-placeholder {
+        color: rgba(0, 0, 0, 0.3) !important;
+        font-size: 16px !important;
+    }
+    .searchInputDriverInformation:-ms-input-placeholder {
+        color: rgba(0, 0, 0, 0.3) !important;
+        font-size: 16px !important;
+    }
+    .searchInputDriverInformation::-ms-input-placeholder {
+        color: rgba(0, 0, 0, 0.3) !important;
+        font-size: 16px !important;
+    }
     .searchInputDriverInformation::placeholder {
         color: rgba(0, 0, 0, 0.3) !important;
         font-size: 16px !important;
