--- a/src/components/home/HomeBody/calendary.css
+++ b/src/components/home/HomeBody/calendary.css
@@ -6,6 +6,7 @@
     background-color: #304269;
     color: #ffffff;
     border: none;
+    -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.705);
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.705);
 }
 
