--- a/src/components/UserProfile/UserProfileTrevelHistory.css
+++ b/src/components/UserProfile/UserProfileTrevelHistory.css
@@ -1,7 +1,7 @@
 .trevelHistoryBody {
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     padding: 15px;
     transition: all 0.3s;
 }
@@ -10,32 +10,37 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.historyBodyElement {
+    margin-bottom: 20px;
+}
+
 .trevelHistoryBody img {
     cursor: pointer;
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     margin-right: 5px;
     border-radius: 50%;
     object-fit: cover;
-    transition: all 0.3s;
+    /* transition: all 0.3s; */
 }
 
-.trevelHistoryBody img:hover {
+
+/* .trevelHistoryBody img:hover {
     transform: scale(5);
-}
+} */
 
 .trevelHistoryBody p {
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 400;
     color: #304269;
     padding-right: 5px;
     margin: 0;
 }
 
 .trevelHistoryBody h5 {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
-    color: #304269;
+    color: #2ca5e0;
     margin: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
