--- a/src/components/UserProfile/UserProfileTrevelHistory.css
+++ b/src/components/UserProfile/UserProfileTrevelHistory.css
@@ -21,13 +21,12 @@
     margin-right: 5px;
     border-radius: 50%;
     object-fit: cover;
-    /* transition: all 0.3s; */
+    transition: all 0.3s;
 }
 
-
-/* .trevelHistoryBody img:hover {
+.trevelHistoryBody img:hover {
     transform: scale(5);
-} */
+}
 
 .trevelHistoryBody span {
     font-size: 14px;
