--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -1,7 +1,7 @@
 .navigationBody {
     position: relative;
     width: 100%;
-    max-height: 40px;
+    max-height: 30px;
     margin-bottom: 30px;
     overflow-x: auto;
     scroll-behavior: smooth;
@@ -15,9 +15,10 @@
     height: 0;
 }
 
-.navigationBody p {
+.navigationBody span {
     cursor: pointer;
-    height: 32px;
+    white-space: nowrap;
+    max-height: 32px;
     margin-right: 30px;
     font-weight: 400;
     font-size: 16px;
@@ -25,7 +26,7 @@
     padding-bottom: 2px;
 }
 
-.navigationBody p:hover {
+.navigationBody span:hover {
     color: #f60;
     border-bottom: 3px solid #f60;
 }
