--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -222,7 +222,7 @@
     justify-content: flex-end;
     position: fixed;
     z-index: 999;
-    width: 100%;
+    width: 50%;
     height: 90%;
     top: 60px;
     right: -100%;
@@ -284,15 +284,14 @@
     justify-content: flex-start;
 }
 
-.burgerMenuBottom span {
-    width: 100%;
+.burgerMenuBottomText {
+    /* width: 100%;
     min-height: 40px;
-    line-height: 40px;
-    padding-right: 10px;
+    line-height: 40px; */
+    padding-left: 5px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 14px;
     color: #686868;
-    text-align: right;
     transition: ease 0.3s;
 }
 
@@ -317,11 +316,13 @@
 .headerRegistration span:focus {
     outline: none;
 }
-.avatar{
+
+.avatar {
     width: 30px;
     height: 30px;
     background-size: contain!important;
     border-radius: 50%;
 }
+
 
 /* Header End */
