--- a/src/components/header/RenderModalRegistration.css
+++ b/src/components/header/RenderModalRegistration.css
@@ -3,40 +3,48 @@
     z-index: 0;
 }
 
-.registrationBodyLogoIcon{
+.registrationBodyLogoIcon {
     position: absolute;
     z-index: 4;
     top: 15px;
     left: 15px;
 }
-.registrationBodyLanguageBlock{
+
+.registrationBodyLanguageBlock {
     position: absolute;
     z-index: 4;
     top: 15px;
     right: 15px;
 }
-.registrationAnswerText{
+
+.registrationAnswerText {
     width: 280px;
     font-size: 12px;
 }
-.registrationBodyLanguageBlock_element{
-    
-}
-.registrationBodyLanguageBlock_element_light{
+
+.registrationBodyLanguageBlock_element {}
+
+.registrationBodyLanguageBlock_element_light {
     color: #fff;
 }
-.registrationBodyLanguageBlock_element_dark{
+
+.registrationBodyLanguageBlock_element_dark {
     color: #304269;
 }
-.registrationBodyLanguageBlock_element_light,.registrationBodyLanguageBlock_element_dark{
+
+.registrationBodyLanguageBlock_element_light,
+.registrationBodyLanguageBlock_element_dark {
     margin-left: 5px;
 }
-.registrationBodyLanguageBlock_element_dark:hover,.registrationBodyLanguageBlock_element_light:hover{
+
+.registrationBodyLanguageBlock_element_dark:hover,
+.registrationBodyLanguageBlock_element_light:hover {
     cursor: pointer;
     text-decoration: underline;
     color: #f60;
 }
-.registrationBodyLanguageBlock_element_selected{
+
+.registrationBodyLanguageBlock_element_selected {
     color: #f60;
 }
 
@@ -86,7 +94,6 @@
 }
 
 .sitingInLight h3 {
-
     font-weight: 700;
     font-size: 33.16px;
     color: #304269;
@@ -97,12 +104,14 @@
     margin-bottom: 10px;
 }
 
-.socialIcon{
+.socialIcon {
     border: none;
 }
-.socialIcon:hover{
-    cursor:pointer;
+
+.socialIcon:hover {
+    cursor: pointer;
 }
+
 .facebookIcon {
     width: 35px;
     height: 35px;
@@ -110,6 +119,7 @@
     background-size: 35px 35px;
     margin: 5px;
 }
+
 .googleIcon {
     width: 35px;
     height: 35px;
@@ -134,39 +144,39 @@
     width: 280px;
     height: 40px;
     background: #ecf4fa;
-
     font-weight: 300;
     font-size: 12px;
     color: #666;
     padding-left: 35px;
 }
 
-.inputIcon{
+.inputIcon {
     position: relative;
 }
 
-.peopleIcon{
+.peopleIcon {
     position: absolute;
     z-index: 3;
     top: 12px;
     left: 15px;
 }
 
-.emailIcon{
+.emailIcon {
     position: absolute;
     z-index: 3;
     top: 13px;
     left: 15px;
 }
 
-.lockIcon{
+.lockIcon {
     position: absolute;
     z-index: 3;
     top: 12px;
     left: 15px;
 }
-.eyeIcon{
-    position: absolute; 
+
+.eyeIcon {
+    position: absolute;
     cursor: pointer;
     z-index: 3;
     top: 13px;
@@ -178,37 +188,34 @@
 }
 
 .sitingInLightInput::placeholder {
-
     font-weight: 300;
     font-size: 12px;
     color: #666;
 }
 
 .sitingInLight p {
-
     font-weight: 300;
     font-size: 12px;
     color: #666;
 }
 
 .sitingInLight a {
-
     font-weight: 300;
     font-size: 12px;
     color: #666;
     text-decoration: none;
     cursor: pointer;
-    
 }
-.forgotPasswordLink{
+
+.forgotPasswordLink {
     border-bottom: 1px solid #ccc;
 }
+
 .sitingInLight a:hover {
     color: #f60;
 }
 
 .sitingInLight button {
-
     font-weight: 400;
     font-size: 15px;
     color: #fff;
@@ -284,14 +291,12 @@
 }
 
 .registrationDark h3 {
-
     font-weight: 700;
     font-size: 24px;
     color: #fff;
 }
 
 .registrationDark p {
-
     font-weight: 300;
     font-size: 12px;
     color: #fff;
@@ -299,7 +304,6 @@
 }
 
 .registrationDark button {
-
     font-weight: 400;
     font-size: 15px;
     color: #fff;
@@ -320,30 +324,27 @@
 .registrationDark button:focus {
     outline: none;
 }
-.returnButtonBlock{
-    position: relative;
-    text-align: center;
-    margin-top: 25px;
-}
-.returnButtonBlock div{
-    position: absolute;
-    bottom: 0;
-    border: none;
+
+.returnButton {
     color: #304269;
     font-size: 14px;
     cursor: pointer;
 }
-.selectTypeBlock{
+
+.selectTypeBlock {
     margin-bottom: 5px;
 }
-.typeCheckLabel{
-    
+
+.typeCheckLabel {
     margin-right: auto;
     margin-bottom: 0;
 }
-.typeCheckButton{
+
+.typeCheckButton {
     margin: auto 0;
 }
+
+
 /*
 .registrationBody {
     position: relative;
