add billing and AffiliateProgram

--- a/src/components/driverProfileRegistration/DriverProfileHistory.css
+++ b/src/components/driverProfileRegistration/DriverProfileHistory.css
@@ -33,3 +33,7 @@
 .driverProfileHistoryTop-active {
     background: #fff;
 }
+
+.driverProfileHistoryTop-active span {
+    color: #f60 !important;
+}
