--- a/src/components/driverProfileRegistration/DriverProfileCalendar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCalendar.css
@@ -116,14 +116,7 @@
 }
 
 .myPhoneInput button {
-    max-width: auto !important;
-    background: none !important;
-    height: 100% !important;
-    margin: auto 0;
-}
-
-.driverProfileSettingsContent .myPhoneInput button {
-    max-width: auto !important;
+    min-width: auto !important;
     background: none !important;
     height: 100% !important;
     margin: auto 0;
