--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -258,6 +258,7 @@ p.filledCardInformationNameCarEdit:hover {
     filter: brightness(70%);
     background-size: contain;
     border-radius: 5px 5px 0 0;
+    width: 100%;
 }
 
 .carPhotoMiniContainer {
