--- a/src/components/stars/Stars.css
+++ b/src/components/stars/Stars.css
@@ -66,3 +66,9 @@
 .react-rater-star.is-active {
     color: #f60 !important;
 }
+
+@media (max-width: 768px) {
+    .infoBlock_starsBlock_stars {
+        font-size: 14px;
+    }
+}
