--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -222,8 +222,8 @@
     justify-content: flex-end;
     position: fixed;
     z-index: 999;
-    width: 50%;
-    height: 90%;
+    width: 100%;
+    height: 95%;
     top: 60px;
     right: -100%;
     transition: ease 0.5s;
@@ -236,48 +236,56 @@
 }
 
 .burgerMenuBg {
-    width: 90%;
+    width: 100%;
     height: 100%;
 }
 
 .burgerMenuTop {
     width: 100%;
-    height: 40%;
-    background: rgb(212, 211, 211);
+    height: 12%;
+    background: #fff;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
-.burgerMenuTop img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 15px;
-}
-
-.burgerMenuTop .burgerName {
-    font-weight: 500;
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 0px;
-}
-
-.burgerMenuTop .burgerGeo {
-    font-weight: 400;
+.burgerMenuTop span {
     font-size: 14px;
-    color: #686868;
-    padding-left: 20px;
-    background: url(./pictures/location_Blue.svg) no-repeat;
-    background-size: 20px 25px;
-    background-position: bottom 0px left 0px;
+    font-weight: 400;
+    color: #304269;
+    padding-left: 10px;
+    background-size: 10px 10px;
 }
+
+.burgerMenuTopDropDown {
+    width: 109px !important;
+}
+
+.burgerMenuTopDropDown div {
+    padding-right: 0px !important;
+    padding-left: 10px !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
+    color: #304269 !important;
+}
+
+.burgerMenuTopDropDownSpan {
+    font-size: 14px !important;
+    padding-left: 2px;
+    font-weight: 400 !important;
+    color: #304269 !important;
+}
+
+
+/* .burgerMenuTop div {
+    width: 60px;
+    height: 30px;
+} */
 
 .burgerMenuBottom {
     width: 100%;
-    height: 60%;
+    height: 89%;
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -288,17 +296,18 @@
     width: 100%;
     min-height: 40px;
     line-height: 40px;
-    padding-right: 10px;
+    padding-right: 30px;
+    text-align: right;
     font-weight: 500;
     font-size: 16px;
     color: #686868;
-    text-align: right;
+    border-bottom: 1px solid #eaeaea;
     transition: ease 0.3s;
 }
 
 .burgerMenuBottom span:hover {
     color: #f60;
-    background: rgba(204, 204, 204, 0.5);
+    background: hsla(0, 0%, 80%, 0.5);
 }
 
 .headerRegistration span {
