--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -296,10 +296,10 @@
     width: 100%;
     min-height: 40px;
     line-height: 40px;
-    padding-right: 30px;
-    text-align: right;
-    font-weight: 500;
-    font-size: 16px;
+    padding-left: 10px;
+    text-align: left;
+    font-weight: 400;
+    font-size: 14px;
     color: #686868;
     border-bottom: 1px solid #eaeaea;
     transition: ease 0.3s;
