--- a/src/components/driverProfileRegistration/DriverProfileBilling.css
+++ b/src/components/driverProfileRegistration/DriverProfileBilling.css
@@ -57,6 +57,10 @@
     font-weight: 500;
 }
 
+.blillingHeader {
+    padding: 20px !important;
+}
+
 @media (max-width: 768px) {
     .billingContentLeft {
         border: none;
