--- a/src/components/driverProfileRegistration/DriverProfileBilling.css
+++ b/src/components/driverProfileRegistration/DriverProfileBilling.css
@@ -47,6 +47,12 @@
     font-weight: 400;
 }
 
+.billingText p {
+    color: #666;
+    font-size: 13px;
+    font-weight: 400;
+}
+
 .billingTextTitle {
     margin-bottom: 20px;
 }
@@ -65,6 +71,7 @@
     font-size: 16px;
     font-weight: 500;
     color: #304269;
+    margin: 0 auto;
 }
 
 @media (max-width: 768px) {
